# glen-elf-tool

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  base_interface.cmake  dev_setup.sh  glen_elf_tool_config.h.in
include/: glen_elf_tool_config.h  kelf.h
src/: main.cpp
